This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Jun-2002 (Lars Duening)  (3.3.210)
    - (prolang.y) If a method in a virtual inherit is rendered invisible,
         but also made available again through a parallel inherit of the same
         program, the compiler resolved the visible function to the
         wrong inheritance, causing the driver to crash (b-020530).

17-May-2002 (Lars Duening)
    - (backend.c) The new arguments to garbage_collection() are ignored
         when the memory allocator doesn support a GC.

13-May-2002 (Lars Duening)  (3.3.209)
    - (hash.c) The hash functions were still incorrect for 0-length
         strings, causing FinalFrontier to crash on boot (reported
         by Dafire).
    - (config.h.in, Makefile.in, autoconf/configure.in) TRACE_CODE
         is now configurable through the configure script, and thus
         is located in config.h and no longer in Makefile.
    - (gcollect, interpret.c, func_spec) Optional filename argument
         to efun garbage_collection() can specify a new GC log file
         for the next GC. The filename is validated through
         master::valid_write() (f-020312).

07-May-2002 (Lars Duening)  (3.3.208)
    - (mapping.c) 'mapping += mapping' now throws an error when the
         mappings are of differing width (reported by Alfe and Coogan).
    - (prolang.y) New notation '([:<expr>])' as shortcut for
         m_allocate(0, <expr>) (suggested by Alfe).

06-May-2002 (Lars Duening)  (3.3.207)
    - (smalloc.c) With CHECK_OBJECT_GC_REF, small chunks could lead to
         misleading diagnostics during the GC.

03-May-2002 (Lars Duening)  (3.3.206)
    - (interpret) The H_DEFAULT_METHOD can now be specified with varargs
         arguments and still receive by-reference variables, similar to
         the call_other() sefun (reported by Bardioc).